--- a/ng-server/ng-config/pom.xml
+++ b/ng-server/ng-config/pom.xml
@@ -19,4 +19,11 @@
    <artifactId>ng-config</artifactId>
 
    <name>NG Platform Config Server</name>
+
+   <dependencies>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-config-server</artifactId>
+      </dependency>
+   </dependencies>
 </project>
