--- a/ng-server/ng-eureka/pom.xml
+++ b/ng-server/ng-eureka/pom.xml
@@ -19,4 +19,11 @@
    <artifactId>ng-eureka</artifactId>
 
    <name>NG Platform Eureka Server</name>
+
+   <dependencies>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+      </dependency>
+   </dependencies>
 </project>
