--- a/ng-tools/site-pumper/pom.xml
+++ b/ng-tools/site-pumper/pom.xml
@@ -20,4 +20,40 @@
 
    <name>Site Pumper</name>
    <url>http://sitedumper.waa.cc</url>
+
+   <dependencies>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-jpa</artifactId>
+         <exclusions>
+            <exclusion>
+               <groupId>org.hibernate</groupId>
+               <artifactId>hibernate-core</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.eclipse.persistence</groupId>
+         <artifactId>org.eclipse.persistence.jpa</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <scope>runtime</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.httpcomponents</groupId>
+         <artifactId>httpclient</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jsoup</groupId>
+         <artifactId>jsoup</artifactId>
+      </dependency>
+
+      <dependency>
+         <groupId>cc.waa.ng</groupId>
+         <artifactId>ng-commons</artifactId>
+         <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+   </dependencies>
 </project>
