增加学校相关模块

--- a/ng-data/pom.xml
+++ b/ng-data/pom.xml
@@ -34,5 +34,6 @@
    <modules>
       <module>ng-user-data</module>
       <module>ng-area-data</module>
+      <module>ng-school-data</module>
    </modules>
 </project>
