--- a/ng-model/pom.xml
+++ b/ng-model/pom.xml
@@ -34,5 +34,6 @@
    <modules>
       <module>ng-user-model</module>
       <module>ng-area-model</module>
+      <module>ng-school-model</module>
    </modules>
 </project>
